# araya_engine

./: API_DOCUMENTATION.md  DEPLOYMENT.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  env.example  pyproject.toml
scripts/: test_search_report.py
src/araya/agents/: __init__.py  citation_agent.py  cross_reference_agent.py  document_analyst_agent.py  lead_agent.py  models.py  orchestrator.py  retrieval.py  search_agent.py  state.py
src/araya/api/: main.py
src/araya/core/: config.py  observability.py
src/araya/db/: __init__.py  vector_store.py
src/araya/eval/: __init__.py  evaluator.py
src/araya/ingestor/: __init__.py  audio.py  factory.py  image.py  models.py  pdf.py  web.py
src/araya/reporting/: __init__.py  engine.py
src/araya_research_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_architect_components.py  test_document_analyst_agent.py
