[project]
name = "araya-research-engine"
version = "0.1.0"
description = "Multi-agent research engine for automated due diligence."
authors = [{ name = "Araya Labs Team" }]
dependencies = [
"langchain",
"langchain-core",
"langgraph",
"langchain-google-genai",
"fastapi",
"uvicorn",
"pydantic",
"pydantic-settings",
"jinja2",
"opentelemetry-api",
"opentelemetry-sdk",
"opentelemetry-exporter-otlp",
"opentelemetry-instrumentation-fastapi",
"httpx",
"qdrant-client",
"google-generativeai",
"python-dotenv",
"pytest",
"pytest-asyncio"
]

[project.optional-dependencies]
ingest-pdf = ["docling"]
ingest-audio = ["deepgram-sdk"]
ingest-web = ["playwright", "markdownify"]
all = ["araya-research-engine[ingest-pdf,ingest-audio,ingest-web]"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
